[package]
name = "enigma-rs"
authors = ["Matt Limb <matt.limb17@gmail.com>"]
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "enigma"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.1", features = ["derive"] }
serde = { version = "1.0.163", features = ["derive"] }
toml = "0.7.4"
